2000-04-03  Mark Galassi  <rosalia@lanl.gov>

	* gsl-config.in, configure.in (GSL_CFLAGS): replaced my gsl-config
	script with Christopher Gabriel's, which is simpler.

	* autogen.sh: changed this into a no-brainer which does not invoke
	configure.

Mon Apr  3 15:43:25 2000  Brian Gough  <bjg@network-theory.co.uk>

	* applied patch from C M Murphy <C.M.Murphy@bath.ac.uk> to fix up
 	missing consts in header files.

Sat Apr  1 20:12:34 2000  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_math.h: added some missing extra constants from BSD
 	(e.g. M_PI_2)

Wed Mar 15 11:16:14 2000  Brian Gough  <bjg@network-theory.co.uk>

	* added a directory for complex number support, complex/

Tue Mar 14 10:28:43 2000  Brian Gough  <bjg@network-theory.co.uk>

	* added support for including headers in C++ programs using
 	__BEGIN_DECLS and __END_DECLS macros

Sat Mar 11 11:18:33 2000  Brian Gough  <bjg@network-theory.co.uk>

	* templates_on.h: added a definition for ONE, to match ZERO

	* Changed matrix struct element dim2 to tda throughout

Mon Mar  6 19:48:27 2000  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_version.h: added simple release-number based support for
 	accessing the version number at compile-time and run-time. This is
 	not a complete solution but it will do for now, as libtool
 	interface numbers are too complicated to worry about at the
 	moment due to other problems with libtool.

Thu Mar  2 20:52:50 2000  Brian Gough  <bjg@network-theory.co.uk>

	* templates_on.h (ATOMIC_IO): added an internal type for IO, for
 	the cases where it isn't possible to read and write a type
 	directly as text (e.g. char)

2000-02-23  Mark Galassi  <rosalia@lanl.gov>

	* Makefile.am, gsl.spec: added a gsl.spec.  Seems to work.

	* gsl-config.in: overhauled gsl-config.in; should work better now.

Tue Feb 15 18:55:05 2000  Brian Gough  <bjg@network-theory.co.uk>

	* added directory for permutation objects, permutation/
