@@ -1,7 +1,11 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(gsl_math.h)
 
-AM_INIT_AUTOMAKE(gsl,0.5+)
+GSL_MAJOR=0
+GSL_MINOR=5
+GSL_MICRO=0
+
+AM_INIT_AUTOMAKE(gsl,"0.5+")
 AM_CONFIG_HEADER(config.h)
 
 dnl things required by automake
@@ -212,7 +216,7 @@ esac
 # Now restore our (possibly augmented) CFLAGS.
 CFLAGS="$save_cflags"
 GSL_CFLAGS="$CFLAGS -I$prefix/include/gsl"
-GSL_LIBS="-L$prefix/lib/gsl -lgsl"
+GSL_LIBS="-L$prefix/lib -lgsl"
 
 AC_SUBST(GSL_CFLAGS)
 AC_SUBST(GSL_LIBS)
