@@ -1,3 +1,8 @@
+Tue Apr 11 14:51:59 2000  Brian Gough  <bjg@network-theory.co.uk>
+
+	* gsl.m4, Makefile.am: added gsl.m4 macros for autoconf
+ 	support
+
 2000-04-03  Mark Galassi  <rosalia@lanl.gov>
 
 	* gsl-config.in, configure.in (GSL_CFLAGS): replaced my gsl-config
